traces/bug_550.txt
src/femlib/GQuadTree.cpp:790: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


src/femlib/GQuadTree.cpp:790:17: Write of unused value
788.               {
789.                   int k= nReStart-1;
790.                   int i = (nReStart-2)/2;
                       ^
791.                   
792.                   for(int i=0; i<Rd::d; ++i)
